--- a/index.html
+++ b/index.html
@@ -17,27 +17,56 @@
   <div class="sidebar">
     <nav class="sidebar-navigation">
       <div class="logo">
-        <a href="#">
-          <img src="assets/icons/logo-spotify.png" alt="Logo do Spotify">
+        <a href="">
+          <img src="./assets/icons/logo-spotify.png" alt="Logo" />
         </a>
       </div>
-      <div>
-        <ul>
-          <li>
-            <a href="#">
-              <span class="fa fa-home"></span>
-              <span>Início</span>
-            </a>
-          </li>
-          <li>
-            <a href="#">
-              <span class="fa fa-search"></span>
-              <span>Buscar</span>
-            </a>
-          </li>
-        </ul>
-      </div>
+      <ul>
+        <li>
+          <a href="">
+            <span class="fa fa-home"></span>
+            <span>Início</span>
+          </a>
+        </li>
+        <li>
+          <a href="">
+            <span class="fa fa-search"></span>
+            <span>Buscar</span>
+          </a>
+        </li>
+      </ul>
     </nav>
+
+    <div class="library">
+      <div class="library-content">
+        <button class="library-button">
+          <span class="fa fas fa-book"></span>
+          <span>Sua biblioteca</span>
+        </button>
+        <span class="fa fa-plus"></span>
+      </div>
+
+      <section class="section-playlist">
+        <div class="section-playlist-content">
+          <span class="text title">Crie sua primeira playlist</span>
+          <span class="text subtitle">É fácil, vamos te ajudar.</span>
+          <button class="section-playlist-button">
+            <span>Criar playlist</span>
+          </button>
+        </div>
+      </section>
+
+      <div class="cookies">
+        <a href="">Cookies</a>
+      </div>
+
+      <div class="languages">
+        <button class="languages-button">
+          <span class="fa fa-globe"></span>
+          <span>Português do Brasil</span>
+        </button>
+      </div>
+    </div>
   </div>
 </body>
 
